fixed space between special features and buy now btn

--- a/Pages/television.html
+++ b/Pages/television.html
@@ -59,7 +59,7 @@
                <span class="special-feature"> 
                 4K UHD | Google TV | Watchlist | Voice Search | Google Play | Chromecast, Netflix, Amazon Prime Video | Additional Features: Apple Airplay, Apple Homekit, Alexa
             </span>
-           </div>   
+           </div><br>
            <a href="https://amzn.in/d/17bDcis" class="btn" target="_blank">Buy Now</a>
         </div>
         <div class="card">       
@@ -80,7 +80,7 @@
                    <span class="special-feature"> 
                     4K UHD Google TV | 2GB RAM | 16 GB ROM | 64-bit Quad Core Processor | 2.4GHz/5GHz dual-band Wi-Fi essor | 2.4GHz/5GHz dual-band Wi-Fi | Google Assistant
                 </span>
-               </div>   
+               </div>   <br>
                <a href="https://amzn.in/d/07ckyFT" class="btn" target="_blank">Buy Now</a>
             </div>
             <div class="card">       
@@ -101,7 +101,7 @@
                        <span class="special-feature"> 
                         4K Dolby Vision | Hey Google | Google TV | HDR 10 | HLG | Wide Color Gamut | Supported Applications : Netflix, Amazon Prime Video, Disney+ Hotstar, Media player, Gallery, 
                         </span>
-                   </div>   
+                   </div>   <br>
                    <a href="https://amzn.in/d/8gDadaP" class="btn" target="_blank">Buy Now</a>
                 </div>
     </div>
@@ -124,7 +124,7 @@
                <span class="special-feature"> 
                 Gamma Engine | Google Assistant | OnePlus Connect 2.0 | OxygenPlay 2.0 | Data Saver Plus | Supported Apps : Netflix, Youtube, Prime Video, Hotstar, SonyLiv, Hungama
             </span>
-           </div>   
+           </div>   <br>
            <a href="https://amzn.in/d/iufzpZ1" class="btn" target="_blank">Buy Now</a>
         </div>
         <div class="card">       
@@ -145,7 +145,7 @@
                    <span class="special-feature"> 
                     Crystal Processor 4K | 4K Upscaling | Wide Color Gamut | Google TV | UHD Dimming | Motion Xcelerator | Supported Apps : Netflix, Youtube, Prime Video
                 </span>
-               </div>   
+               </div>   <br>
                <a href="https://amzn.in/d/iVMzpkN" class="btn" target="_blank">Buy Now</a>
             </div>
             <div class="card">       
@@ -166,7 +166,7 @@
                        <span class="special-feature"> 
                         WebOS 23 with User Profiles | Filmmaker Mode, HDR 10 & HLG | Game Optimizer, ALLM, HGIG Mode | Unlimited OTT Apps | AI Brightness Control, 4K Upscaling & AI Sound
                     </span>
-                   </div>   
+                   </div>   <br>
                    <a href="https://amzn.in/d/9UENdty" class="btn" target="_blank">Buy Now</a>
                 </div>
     </div>
@@ -189,7 +189,7 @@
                <span class="special-feature"> 
                 Certified Google TV | Dolby Vision | Dolby Atmos | Dual Amplifier | Dual Woofer | Dual Tweeter | MEMC | Dual Band Wifi | 2 way Bluetooth |Blue Light Reduction | Dynamic Signal Calibration
             </span>
-           </div>   
+           </div>   <br>
            <a href="https://amzn.in/d/3cOzCux" class="btn" target="_blank">Buy Now</a>
         </div>
         <div class="card">       
@@ -211,7 +211,7 @@
                     4K Dolby Vision | Hey Google | Google TV | HDR 10 | HLG | Wide Color Gamut | Supported Applications : Netflix, Disney+ Hotstar, Media player, Gallery, TV Manager, YouTube, Play Store
 
                 </span>
-               </div>   
+               </div>   <br>
                <a href="https://amzn.in/d/ik4XsRu" class="btn" target="_blank">Buy Now</a>
             </div>
             <div class="card">       
@@ -233,7 +233,7 @@
                         AI Dynamic Backlight Control | Ambient Digital Noise Reduction | AI Processor with 16GB storage + 2GB RAM | Google TV | Dual Band WiFi & Bluetooth 5.1 | Netflix, Prime Video, Hotstar
 
                     </span>
-                   </div>   
+                   </div>   <br>
                    <a href="https://amzn.in/d/8CI3ZDn" class="btn" target="_blank">Buy Now</a>
                 </div>
     </div>
