--- a/Pages/speaker.html
+++ b/Pages/speaker.html
@@ -60,7 +60,7 @@
             <div class="cart-item">
               <!-- <img src="../Images/Sp2.webp" alt="Speaker" class="speaker-image">  -->
                <div class="item-details">
-                <h3 class="name">Wireless Speaker Under  Rs. 2000</h3>
+                <h3 class="name">Wireless Speaker Under  Rs. 3000</h3>
                 <!-- <p class="description">Wireless Speaker with 10W Stereo Sound, 12 Hours Nonstop Playtime, Lightweight Design, BT, TF Card & AUX Compatible</p>
                 -->
                 <img src="../Images/Sp2.webp" alt="Speaker"  class="speaker-image-2"> 
@@ -90,18 +90,19 @@
             </div>
           </div>
           <div class="cart-item">
-            <img src="../Images/Sp2.webp" alt="Speaker" class="speaker-image">  <div class="item-details">
-              <h3 class="name">Unix Thunder Best Wireless Speakers</h3>
-              <p class="description">Here is Unix Thunder, one of the best wireless bluetooth speakers at a very reasonable price. The Bluetooth speaker also supports expensive TF cards and USB ports and has four different attractive colors. It is also backed by a 3-month risk-free warranty.</p>
-              <span class="price">Rs. 1299.00</span>
+            <img src="../Images/Sp3.webp" alt="Speaker" class="speaker-image"> </br>                       <div class="item-details">  
+              <h3 class="name"> ZEBRONICS Zeb-Barrel </h3>
+              <p class="description">Wireless BT Supports USB & m - SD Built-in FM Radio AUX Input TWS Function 6.3mm Microphone input Media / Volume control Built-in Rechargeable battery ZEB-Barrel 100 </p>
+              <span class="price">Rs. 500</span>
               <button class="buy-button">Buy Now</button>
             </div>
           </div>
           <div class="cart-item">
-            <img src="../Images/Speaker_2.jpg" alt="Speaker" class="speaker-image">  <div class="item-details">
-              <h3 class="name">SRS-XB100 Portable Bluetooth Speaker</h3>
-              <p class="description">The XB100 body and strap are partially made from recycled plastic materials to help reduce the environmental impact. We're also proud to say that our packaging uses no plastic material. You can feel as good buying this speaker as you will listening to it.</p>
-              <span class="price">Rs . 4999</span>
+            <img src="../Images/sp4.webp" alt="Speaker" class="speaker-image">  <div class="item-details">
+              <h3 class="name">
+                iGear Galaxy 10W Bluetooth Speaker</h3>
+              <p class="description">Experience Unparalleled Sound Quality With Our Galaxy Featuring 360-degree Led Customisable Lights. With 360-degree Surround Sound, You'll Feel Like You're In The Front Row</p>
+              <span class="price">Rs .799</span>
               <button class="buy-button">Buy Now</button>
             </div>
           </div>
@@ -109,10 +110,10 @@
           </div>
           <div class="cart-items">
             <div class="cart-item">
-              <img src="../Images/sp1.webp" alt="Speaker" class="speaker-image">  <div class="item-details">
-                <h3 class="name">Wireless Speaker-Stone 350 RED</h3>
-                <p class="description">Wireless Speaker with 10W Stereo Sound, 12 Hours Nonstop Playtime, Lightweight Design, BT, TF Card & AUX Compatible</p>
-                <span class="price">Rs. 899</span>
+              <img src="../Images/sp2.webp" alt="Speaker" class="speaker-image">  <div class="item-details">
+                <h3 class="name">Unix Thunder Best Wireless Speakers</h3>
+                <p class="description">>Here is Unix Thunder, one of the best wireless bluetooth speakers at a very reasonable price. The Bluetooth speaker also supports expensive TF cards and USB ports and has four different attractive colors. It is also backed by a 3-month risk-free warranty</p>
+                <span class="price">Rs. 2999</span>
                 <button class="buy-button">Buy Now</button>
               </div>
             </div>
