card image added and card data added

--- a/Pages/speaker.html
+++ b/Pages/speaker.html
@@ -113,23 +113,25 @@
               <img src="../Images/sp2.webp" alt="Speaker" class="speaker-image">  <div class="item-details">
                 <h3 class="name">Unix Thunder Best Wireless Speakers</h3>
                 <p class="description">>Here is Unix Thunder, one of the best wireless bluetooth speakers at a very reasonable price. The Bluetooth speaker also supports expensive TF cards and USB ports and has four different attractive colors. It is also backed by a 3-month risk-free warranty</p>
-                <span class="price">Rs. 2999</span>
+                <span class="price">Rs. 2999.00</span>
                 <button class="buy-button">Buy Now</button>
               </div>
             </div>
             <div class="cart-item">
-              <img src="../Images/Sp2.webp" alt="Speaker" class="speaker-image">  <div class="item-details">
-                <h3 class="name">Unix Thunder Best Wireless Speakers</h3>
-                <p class="description">Here is Unix Thunder, one of the best wireless bluetooth speakers at a very reasonable price. The Bluetooth speaker also supports expensive TF cards and USB ports and has four different attractive colors. It is also backed by a 3-month risk-free warranty.</p>
-                <span class="price">Rs. 1499.00</span>
+              <img src="../Images/sp5.webp" alt="Speaker" class="speaker-image">  <div class="item-details">
+                <h3 class="name">
+                  Impex Multimedia Trolley Speaker</h3>
+                <p class="description">Impex Speaker Systems Deliver Compellingly Realistic And Powerful Auditory Experience, Impex Presents Powerful Scalable And Versatile Speaker System Categories Like Stage</p>
+                <span class="price">Rs. 1999.00</span>
                 <button class="buy-button">Buy Now</button>
               </div>
             </div>
             <div class="cart-item">
-              <img src="../Images/Speaker_2.jpg" alt="Speaker" class="speaker-image">  <div class="item-details">
-                <h3 class="name">SRS-XB100 Portable Bluetooth Speaker</h3>
-                <p class="description">The XB100 body and strap are partially made from recycled plastic materials to help reduce the environmental impact. We're also proud to say that our packaging uses no plastic material. You can feel as good buying this speaker as you will listening to it.</p>
-                <span class="price">Rs . 5990</span>
+              <img src="../Images/sp6.webp" alt="Speaker" class="speaker-image">  <div class="item-details">
+                <h3 class="name">	
+                  Jxl Speaker Bt110 Rgb With Mic Speaker</h3>
+                <p class="description">Type Is Party Speaker. Bluetooth Is Yes. Sales Package Is Bluetooth Speaker , Mic. Built-in Fm Radio Is Yes. Configuration Is Mono. Power Output Rms Is 50 W. Color Is Black</p>
+                <span class="price">Rs . 2599.00</span>
                 <button class="buy-button">Buy Now</button>
               </div>
             </div>
