--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -16,6 +16,12 @@ margin: 10px;
     justify-content:start;
     align-items: center;
    }
+   disc{
+display:none ;
+}
+.highlight{
+display:none;
+} 
 
 }
 </style> 
