--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -22,6 +22,18 @@ display:none ;
 .highlight{
 display:none;
 } 
+.e-img{
+margin: 0 20px; 
+height: 100px;
+width: 120px;
+border-radius: 10px 10px 0 0;
+display: block;
+margin-bottom: 5px;
+}
+.e-name{
+margin-left: 15px;
+font-size: 15px;
+} 
 
 }
 </style> 
