--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -34,7 +34,15 @@ margin-bottom: 5px;
 margin-left: 15px;
 font-size: 15px;
 } 
-
+.font-size{
+    font-size: 10px;
+}
+.btn{
+height: 25px;
+width: 70px;
+margin-top: 5px;
+margin-left: 50px;
+}
 }
 </style> 
 </head>
