media_queris_applied_for_mobile_devices

--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -44,6 +44,57 @@ margin-top: 5px;
 margin-left: 50px;
 }
 }
+/* Mobile Devices */
+@media screen and (min-width: 600px) and (max-width: 915px) {
+    
+    .cart{
+        height: 250px;
+width: 190px;
+margin: 10px;
+}.container_cart {
+    flex-direction: column;
+    justify-content:start;
+    align-items: center;
+   }
+.disc{
+display:none ;
+}
+.highlight{
+display:none;
+} 
+.e-img{
+margin: 0 20px; 
+height: 100px;
+width: 120px;
+border-radius: 10px 10px 0 0;
+display: block;
+margin-bottom: 5px;
+}
+.e-name{
+margin-left: 15px;
+font-size: 15px;
+} 
+.font-size{
+    font-size: 13px;
+}
+.btn{
+display: none;
+}
+.clickbtn{
+    width: 100px;
+    height:25px;
+    padding:1px;
+    border-radius: 5px;
+    margin-left:20px;
+    color: rgb(11, 26, 54);
+    background-color: rgb(225, 221, 221);
+    display: block;
+}
+.moreinfo{
+    margin-left: 30px;
+    display: block;
+}
+}
 </style> 
 </head>
 <body>
