--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -95,6 +95,21 @@ display: none;
     display: block;
 }
 }
+  /* Tablet Devices */
+ @media screen and (min-width: 915px) and (max-width:1034px) {
+    .cart{
+margin:50px 30px 30px 60px;
+height: 520px;
+width: 360px;
+background-color: aliceblue;
+border-radius: 10px;
+box-shadow: 1px 1px 20px 2px grey;
+display: inline-block;
+}
+.container_cart {
+    justify-content:space-between;
+   }
+ }
 </style> 
 </head>
 <body>
