--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -110,6 +110,35 @@ display: inline-block;
     justify-content:space-between;
    }
  }
+ /* Dekstop device */
+@media screen and (min-width: 1035px) and (max-width: 1105px) { 
+    .cart{
+margin:20px;
+height: 450px;
+width: 300px;
+} 
+.highlight{
+display: none;
+}
+.btn{
+      text-align:center ;
+      margin-left:120px;
+      margin-bottom:20px;
+     }
+     .e-img{
+margin: 0 20px; 
+height: 170px;
+width: 230px;
+border-radius: 10px;
+display: block;
+margin-bottom: 5px;
+}
+.container_cart {
+   justify-content:start;
+    flex-wrap: wrap;
+    align-items: start;
+   }
+}
 </style> 
 </head>
 <body>
