media_queries_applied_for_large_devices

--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -139,6 +139,17 @@ margin-bottom: 5px;
     align-items: start;
    }
 }
+@media screen and (min-width: 1106px) and (max-width: 1380px) { 
+    .cart{
+margin-left: 100px;
+height: 520px;
+width: 370px;
+}
+.container_cart {
+    justify-content:start;
+    align-items: center;
+   }
+}
 </style> 
 </head>
 <body>
