--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <a href="#">Login</a>
             </div>
             <div class="second">
-                <h3>Enter Your E-mail Here</h3>
+                <h3>CONNECT WITH US</h3>
                 <form>
                     <input type="email" placeholder="Your E-Mail Address" required><br>
                     <button type="submit">SUBSCRIBE NOW</button>
