--- a/Pages/mobile.html
+++ b/Pages/mobile.html
@@ -258,6 +258,12 @@
              </div>  
 
 
+             <div>
+    
+                <h1 class="catergories-s">Under 40000</h1> 
+            </div>
+
+
 
 
                 
