--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./../CSS/earphone.css"> 
 </head>
 <body>
+    <section>
     <nav>
         <a href="#" class="logo">CARA🌿</a>
         <ul class="menu">
@@ -30,6 +31,7 @@
             <li><a href="#login">Login </a></li>
         </ul>
     </nav>
+</section>
     <h2 class="earbuds-heading">Discover the perfect sound experience</h2>
     <p class="sub-heading">Explore our range of premium earbuds...</p>
     <p class="range"><b>Under ₹ 10,000</b></p>
@@ -248,7 +250,37 @@
                      <hr />
              <a href="https://dl.flipkart.com/dl/beats-fit-pro-active-noise-cancellation-bluetooth-headset/p/itm578d4ab5909b6?pid=ACCGXBYXQUPKCRJQ&cmpid=product.share.pp&_refId=PP.050a9345-2f45-42ea-a66b-08eade29df68.ACCGXBYXQUPKCRJQ&_appId=WA "><button class="btn">Buy Now</button><button class="clickbtn">Click Here to know more...</button></a>
             </div>
-
+            <section class="foot">
+            <div class="footer">
+                <div class="first">
+                    <h3>USEFUL LINKS</h3>
+                    <a href="./index.html">Home</a>
+                    <a href="#">Categories</a>
+                    <a href="#">About Us</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Login</a>
+                </div>
+                <div class="second">
+                    <h3>Enter Your E-mail Here</h3>
+                    <form>
+                        <input type="email" placeholder="Your E-Mail Address" required><br>
+                        <button type="submit">SUBSCRIBE NOW</button>
+                    </form>
+                </div>
+               <div class="third">
+                <h3>CONTACT US</h3>
+                <p style="color: rgb(174, 126, 6);">📞 9678423150</p><br>
+                <p style="color:rgb(88, 60, 10) ;"><span style="font-size: 20px; color: chocolate;">Address</span> : Avenue 123, street raod Robert Robertson, 
+                    <br>1234 NW Bobcat Lane,Robert Robertson, <br>1234 NW Bobcat Lane, St. Robert, MO 65584-5678.</p>
+                <div class="icon">
+                    <img src="./../Images/facebook.png">
+                    <img src="./../Images/twitter.png">
+                    <img src="./../Images/instagram.png">
+                    <img src="./../Images/linkedin.png">
+                </div>
+               </div>
+            </div>
+        </section>
         </div>
 </body>
 </html>
