minor changes in mobile page

--- a/Pages/mobile.html
+++ b/Pages/mobile.html
@@ -148,7 +148,7 @@
 
              <div>
      
-                <h1 class="catergories-s">Under 30000</h1> 
+                <h1 class="categories-s">Under 30000</h1> 
 
 
 
@@ -260,7 +260,7 @@
 
              <div>
     
-                <h1 class="catergories-s">Under 40000</h1> 
+                <h1 class="categories-s">Under 40000</h1> 
 
 
                 <div class="cart">
