brand icons added

--- a/index.html
+++ b/index.html
@@ -153,8 +153,16 @@
         </div>
     </section><br>
     <section class="brand">
-        <
-    </section>
+        <h2>Brands We Are Passionate About....</h2><br>
+        <div class="brand-container">
+            <button><img src="./Images/apple.png" alt="Apple"></button>
+            <button><img src="./Images/huawei.png" alt="Huawei"></button>
+            <button><img src="./Images/lg.png" alt="LG"></button>            
+            <button><img src="./Images/samsung.png" alt="Samsung"></button>
+            <button><img src="./Images/sandisk.png" alt="Sandisk"></button>
+            <button><img src="./Images/sony.png" alt="Sony"></button>
+        </div>
+    </section><br><br>
     <section class="about" style="background-color: rgb(216, 233, 248);">
         <h2 style="padding-left: 60px; font-style: italic; color: rgb(128, 233, 247);">Why Cara?</h2><br>
         <div class="about-container">
