added media queries on top recommended

--- a/Pages/camera.html
+++ b/Pages/camera.html
@@ -79,7 +79,7 @@
                 <span>
                     The ZA-1F from Sony is the perfect choice for you to create creative vlogs. Its wide-angle allows you to
                     click group
-                    selfies and picturesque sceneries.
+                    selfies.
                 </span>
             </div>
         
@@ -394,6 +394,39 @@
         <button class="btn">Buy Now</button>
     
     </div>
+    <section class="foot">
+        <div class="footer">
+            <div class="first">
+                <h3>USEFUL LINKS</h3>
+                <a href="./index.html">Home</a>
+                <a href="#">Categories</a>
+                <a href="#">About Us</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Login</a>
+            </div>
+            <div class="second">
+                <h3>Enter Your E-mail Here</h3>
+                <form>
+                    <input type="email" placeholder="Your E-Mail Address" required><br>
+                    <button type="submit">SUBSCRIBE NOW</button>
+                </form>
+            </div>
+            <div class="third">
+                <h3>CONTACT US</h3>
+                <p style="color: rgb(174, 126, 6);">📞 9678423150</p><br>
+                <p style="color:rgb(88, 60, 10) ;"><span style="font-size: 20px; color: chocolate;">Address</span> : Avenue
+                    123, street raod Robert Robertson,
+                    <br>1234 NW Bobcat Lane,Robert Robertson, <br>1234 NW Bobcat Lane, St. Robert, MO 65584-5678.
+                </p>
+                <div class="icon">
+                    <img src="/Images/facebook.png">
+                    <img src="/Images/twitter.png">
+                    <img src="/Images/instagram.png">
+                    <img src="/Images/linkedin.png">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
