--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="./Images/free-delivery.png" class="feature-img">
             <h1>Fast-Delivery</h1>
             <p>Experience the convenience of fast delivery and shop with confidence,
-                 knowing that your satisfaction is our top priority.
+                knowing that your satisfaction is our top priority.
                 Shop now and enjoy the swift arrival of your favorite products!
           </p>
         </div>
@@ -76,7 +76,7 @@
           </video>
             <h1 style="padding-top: 150px;
              padding-left: 80px; color: rgb(141, 32, 54); word-spacing: 4px; font-family: Handlee, cursive;font-weight: 400; font-style: normal;" >
-                Everyone of us loves to shop, right? <br>And everyone has a store that they love and often buy there, WATCH AND SHOP WITH CARA🛒.</h1>
+                Everyone of us loves to shop, right? <br>And everyone has a store that they love and often buy there, <span style="color: rgb(199, 147, 15);"> WATCH AND SHOP WITH CARA🛒. </span></h1>
     </section>
     
      <section class="card-container">
