changes_in_html_file

--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -139,7 +139,7 @@
                    </div> 
                  <hr />
                  <a href="https://www.flipkart.com/realme-buds-t110-ai-enc-calls-upto-38-hours-playback-fast-charging-bluetooth-headset/p/itmd3c003c0fed35?pid=ACCGZN9AG6YP38EG&lid=LSTACCGZN9AG6YP38EGQAQFYJ&marketplace=FLIPKART&q=earbuds&store=0pm%2Ffcn%2F821%2Fa7x%2F2si&srno=s_1_4&otracker=search&otracker1=search&fm=Search&iid=0791b056-bbce-4b88-82a0-774c18f2bfff.ACCGZN9AG6YP38EG.SEARCH&ppt=sp&ppn=sp&ssid=rzxltxfuw00000001716463670524&qH=2951f68ff1fee1e0"><button class="btn">Buy Now</button> <button class="clickbtn">Click Here to know more...</button></a>
-            </div>
+            </div></div>
             <p class="range"><b>Under 20,000</b></p>
     <div class="container_cart">
     <div class="cart">
@@ -250,6 +250,8 @@
                      <hr />
              <a href="https://dl.flipkart.com/dl/beats-fit-pro-active-noise-cancellation-bluetooth-headset/p/itm578d4ab5909b6?pid=ACCGXBYXQUPKCRJQ&cmpid=product.share.pp&_refId=PP.050a9345-2f45-42ea-a66b-08eade29df68.ACCGXBYXQUPKCRJQ&_appId=WA "><button class="btn">Buy Now</button><button class="clickbtn">Click Here to know more...</button></a>
             </div>
+           </div>
+
             <section class="foot">
             <div class="footer">
                 <div class="first">
@@ -281,6 +283,6 @@
                </div>
             </div>
         </section>
-        </div>
+        
 </body>
 </html>
