--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -251,7 +251,17 @@
              <a href="https://dl.flipkart.com/dl/beats-fit-pro-active-noise-cancellation-bluetooth-headset/p/itm578d4ab5909b6?pid=ACCGXBYXQUPKCRJQ&cmpid=product.share.pp&_refId=PP.050a9345-2f45-42ea-a66b-08eade29df68.ACCGXBYXQUPKCRJQ&_appId=WA "><button class="btn">Buy Now</button><button class="clickbtn">Click Here to know more...</button></a>
             </div>
            </div>
-
+           <section class="offer">
+            <div class="sell">
+            <img src="../Images/sale.png"><h1>THE GRAND</h1>
+            <h1>GADGET DAYS</h1>
+            <h4 style="color: rgb(255, 136, 0);">23<sup>rd</sup> to 24<sup>th</sup></h4>
+            <h2 style="color: rgb(237, 237, 45);">Best $elling Electronics & Accessories</h2>
+            <h3>Wacthes, Mobile-Phones, Laptops & Many More....</h3><br>
+            <p style="font-size: 20px;">Celebrations Continue</p>
+            <button><b>Upto 40% off</b></button> 
+            </div>
+        </section>
             <section class="foot">
             <div class="footer">
                 <div class="first">
