added container for flex properties

--- a/Pages/television.html
+++ b/Pages/television.html
@@ -41,6 +41,7 @@
     </div>
     <div class="category">
         <h1 class="category-heading">Under ₹60,000/- </h1>
+    <div class="container-card">    
     <div class="card">       
         <img src="../Images/tv1.webp" class="tv-img" />
        <p class="tv-price">₹ 57,990/-</p><br />
@@ -105,7 +106,9 @@
                    <a href="https://amzn.in/d/8gDadaP" class="buy-btn" target="_blank">Buy Now</a>
                 </div>
     </div>
+</div>
     <h1 class="category-heading">Under ₹50,000/- </h1>
+    <div class="container-card">
     <div class="card">       
         <img src="../Images/tv4.jpg" class="tv-img" />
        <p class="tv-price">₹ 49,990/-</p><br />
@@ -170,7 +173,9 @@
                    <a href="https://amzn.in/d/9UENdty" class="buy-btn" target="_blank">Buy Now</a>
                 </div>
     </div>
+</div>
     <h1 class="category-heading">Under ₹40,000/- </h1>
+    <div class="container-card">
     <div class="card">       
         <img src="../Images/tv7.jpg" class="tv-img" />
        <p class="tv-price">₹ 35,999/-</p><br />
@@ -236,6 +241,7 @@
                    <a href="https://amzn.in/d/8CI3ZDn" class="buy-btn" target="_blank">Buy Now</a>
                 </div>
     </div>
+</div>
     <section class="foot">
         <div class="footer">
             <div class="first">
