--- a/Pages/mobile.html
+++ b/Pages/mobile.html
@@ -397,8 +397,11 @@
 
             </div>
 
-
-
+            <div style="margin: 10px 0 50px 300px;">
+            <video height="400px" poster="./Images/cara logo.jpg" style="width: 700px;" controls >
+                <source src="./../Images/mobile.mp4" type="video/mp4" />
+              </video>
+            </div>
 
     <div>
 
