--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -9,9 +9,9 @@
 <body>
     <section>
     <nav>
-        <a href="#" class="logo">CARA🌿</a>
+        <a href="/index.html" class="logo">CARA🌿</a>
         <ul class="menu">
-            <li><a href="#home">HOME</a></li>
+            <li><a href="#/index.html">HOME</a></li>
             <div class="dropdown">
                 <input type="checkbox" id="dropdown-toggle" class="dropdown-checkbox">
                 <label for="dropdown-toggle" class="dropbtn">
@@ -19,10 +19,10 @@
                 </label>
                 <div class="dropdown-content">
                     <a href="#">Laptop</a>
-                    <a href="./Pages/mobile.html">Mobile Phones</a>
-                    <a href="./Pages/camera.html">Digital Camera</a>
-                    <a href="./Pages/earphone.html" class="active-menu">Earbuds</a>
-                    <a href="#">Television</a>
+                    <a href="../Pages/mobile.html">Mobile Phones</a>
+                    <a href="../Pages/camera.html">Digital Camera</a>
+                    <a href="../Pages/earphone.html" class="active-menu">Earbuds</a>
+                    <a href="../Pages/television.html">Television</a>
                     <a href="#">Speaker</a>
                 </div>
             </div>
@@ -32,6 +32,9 @@
         </ul>
     </nav>
 </section>
+<div class="header">
+    <h1>Explore the Top Earbuds</h1>
+</div>
     <h2 class="earbuds-heading">Discover the perfect sound experience</h2>
     <p class="sub-heading">Explore our range of premium earbuds...</p>
     <p class="range"><b>Under ₹ 10,000</b></p>
@@ -243,21 +246,11 @@
                     <li>1 Year Domestic Warranty</li>
                     <li>Cash on delivery.</li>
                 </ul></div>  
-                <section class="horizontal-row"><hr/></section>
+               <hr/>
              <a href="https://dl.flipkart.com/dl/beats-fit-pro-active-noise-cancellation-bluetooth-headset/p/itm578d4ab5909b6?pid=ACCGXBYXQUPKCRJQ&cmpid=product.share.pp&_refId=PP.050a9345-2f45-42ea-a66b-08eade29df68.ACCGXBYXQUPKCRJQ&_appId=WA "><button class="btn">Buy Now</button><button class="clickbtn">Click Here to know more...</button></a>
             </div>
            </div>
-           <section class="offer">
-            <div class="sell">
-            <img src="../Images/sale.png"><h1>THE GRAND</h1>
-            <h1>GADGET DAYS</h1>
-            <h4 style="color: rgb(255, 136, 0);">23<sup>rd</sup> to 24<sup>th</sup></h4>
-            <h2 style="color: rgb(237, 237, 45);">Best $elling Electronics & Accessories</h2>
-            <h3>Wacthes, Mobile-Phones, Laptops & Many More....</h3><br>
-            <p style="font-size: 20px;">Celebrations Continue</p>
-            <button><b>Upto 40% off</b></button> 
-            </div>
-        </section>
+           
             <section class="foot">
             <div class="footer">
                 <div class="first">
