--- a/Pages/mobile.html
+++ b/Pages/mobile.html
@@ -352,7 +352,7 @@
                      <hr />
             
                      <div class="h-btn">
-                        <a href="https://amzn.in/d/bHwWkIO" target="_blank class="btn">Buy Now</a>
+                        <a href="https://amzn.in/d/bHwWkIO" target="_blank" class="btn">Buy Now</a>
                       </div>
                 </div>
 
