--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
             <p style="color:rgb(88, 60, 10) ;"><span style="font-size: 20px; color: chocolate;">Address</span> : Avenue 123, street raod Robert Robertson, 
                 <br>1234 NW Bobcat Lane,Robert Robertson, <br>1234 NW Bobcat Lane, St. Robert, MO 65584-5678.</p>
             <div class="icon">
-                <img src="./Images/facebook.png">
-                <img src="./Images/twitter.png">
-                <img src="./Images/instagram.png">
-                <img src="./Images/linkedin.png">
+                <a href="https://m.facebook.com/people/Electronic-Gadgets/100077164892594/"><img src="./Images/facebook.png"></a>
+                <a href="https://x.com/i/flow/login?redirect_after_login=%2FElectroGadgets1"><img src="./Images/twitter.png"></a>
+                <a href="https://www.instagram.com/electronicgadgets.365?igsh=MTVvdHBlNjZ1YXNhYQ=="><img src="./Images/instagram.png"></a>
+                <a href="https://www.linkedin.com/feed/update/urn:li:activity:7090345428411408384?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7090345428411408384%29"><img src="./Images/linkedin.png"></a>
             </div>
            </div>
         </div>
