--- a/Pages/earphone.html
+++ b/Pages/earphone.html
@@ -255,9 +255,9 @@
             <div class="footer">
                 <div class="first">
                     <h3>USEFUL LINKS</h3>
-                    <a href="./index.html">Home</a>
-                    <a href="#">Categories</a>
-                    <a href="#">About Us</a>
+                    <a href=".,/index.html">Home</a>
+                    <a href="../index.html">Categories</a>
+                    <a href="../Pages/about.html">About Us</a>
                     <a href="#">Contact Us</a>
                     <a href="#">Login</a>
                 </div>
@@ -274,10 +274,10 @@
                 <p style="color:rgb(88, 60, 10) ;"><span style="font-size: 20px; color: chocolate;">Address</span> : Avenue 123, street raod Robert Robertson, 
                     <br>1234 NW Bobcat Lane,Robert Robertson, <br>1234 NW Bobcat Lane, St. Robert, MO 65584-5678.</p>
                 <div class="icon">
-                    <img src="./../Images/facebook.png">
-                    <img src="./../Images/twitter.png">
-                    <img src="./../Images/instagram.png">
-                    <img src="./../Images/linkedin.png">
+                    <img src="../Images/facebook.png">
+                    <img src="../Images/twitter.png">
+                    <img src="../Images/instagram.png">
+                    <img src="../Images/linkedin.png">
                 </div>
                </div>
             </div>
