--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
     <section class="brand">
         <h2>Brands We Are Passionate About....</h2><br>
         <div class="brand-container">
-            <button><img src="./Images/apple.png" alt="Apple"></button>
-            <button><img src="./Images/huawei.png" alt="Huawei"></button>
-            <button><img src="./Images/lg.png" alt="LG"></button>            
-            <button><img src="./Images/samsung.png" alt="Samsung"></button>
-            <button><img src="./Images/sandisk.png" alt="Sandisk"></button>
-            <button><img src="./Images/sony.png" alt="Sony"></button>
+            <button><a href="https://www.apple.com/in/shop/accessories/all"><img src="./Images/apple.png" alt="Apple"></a></button>
+            <button><a href="https://consumer.huawei.com/en/support/product/"><img src="./Images/huawei.png" alt="Huawei"></a></button>
+            <button><a href="https://www.lg.com/in/my-lg/my-product-list/"><img src="./Images/lg.png" alt="LG"></a></button>            
+            <button><a href="https://www.samsung.com/in/?gad_source=1&gclid=Cj0KCQjwmMayBhDuARIsAM9HM8d-AW0rEKkokTSJtV5ThbGWQh96zq0jwaxIDu8bUHhMgHOWdmshgr8aAgAQEALw_wcB"><img src="./Images/samsung.png" alt="Samsung"></a></button>
+            <button><a href="https://www.westerndigital.com/en-in/brand/sandisk"><img src="./Images/sandisk.png" alt="Sandisk"></a></button>
+            <button><a href="https://www.sony.co.in/all-products"></a><img src="./Images/sony.png" alt="Sony"></button>
         </div>
     </section><br><br>
     <section class="about" style="background-color: rgb(216, 233, 248);">
@@ -221,5 +221,5 @@
         </div>
     </section>
     
-</body>
+</body> 
 </html>
