mobile page intro added

--- a/Pages/mobile.html
+++ b/Pages/mobile.html
@@ -32,6 +32,16 @@
             <li><a href="#login">Login </a></li>
            </ul>
         </nav>
+    </section>
+
+        
+         <div>
+            <h1 class="top-heading">Top Mobile Phones</h1>
+            <h1 style="text-align: center; margin-bottom:30px;"> Connect, Explore, Mobilize: Your World in Motion!</h1>
+            <p style="text-align: center; margin-bottom: 40px; color: #666;;"> Our mobile platform is designed to make your browsing experience seamless, whether you're on the go or relaxing at home
+                Navigate effortlessly through our user-friendly interface to explore a world of possibilities. From browsing products to accessing valuable information, we've tailored every aspect to ensure your satisfaction.
+            </p>
+         </div>
 
 
                <div class="card-parent">
