--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link rel="stylesheet" href="./../CSS/about.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="./../CSS/contact.css">
 </head>
 <body>
     <section>
@@ -32,17 +32,15 @@
            </ul>
         </nav>
         <section>
-    <section class="about">
-        <div class="container">
-            <h1 style="font-size: 25px; color: goldenrod;">About Us</h1>
-            <p>We at CARA🌿 are dedicated to providing you with the best electronic gadgets and accessories. With years of experience in the industry, we understand the needs and desires of our customers.</p>
-            <p>Our mission is to make your shopping experience seamless and enjoyable. We strive to offer a wide range of products at competitive prices while maintaining the highest standards of quality and customer service.<img src="./../Images/animated.jpg"></p>
-            <p>At CARA🌿, we value innovation and technology, which is why we continuously update our inventory to bring you the latest and most advanced gadgets on the market.</p>
-            <p>Whether you're looking for a new smartphone, laptop, camera, or any other electronic device, you can trust CARA🌿 to deliver exceptional products and exceptional service.</p>
-        </div>
-    </section>
-    
-    <section class="foot">
+    <form class="form">
+        <h2>CONTACT US</h2>
+        <p type="Name:"><input placeholder="Write your name here.."></input></p>
+        <p type="Email:"><input placeholder="Let us know how to contact you back.."></input></p>
+        <p type="Message:"><input placeholder="What would you like to tell us.."></input></p>
+        <button>Send Message</button>
+      </form>
+
+      <section class="foot">
         <div class="footer">
             <div class="first">
                 <h3>USEFUL LINKS</h3>
@@ -73,11 +71,5 @@
            </div>
         </div>
     </section>
-
-    <footer class="last">
-        <div class="container">
-            <p>&copy; 2024 CARA🌿. All Rights Reserved.</p>
-        </div>
-    </footer>
 </body>
 </html>
