--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <a href="#">Speaker</a>
                 </div>
             </div>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#contact">Contact Us</a></li>
-            <li><a href="#login">Login </a></li>
+            <li><a href="./Pages/about.html">About Us</a></li>
+            <li><a href="./Pages/contact.html">Contact Us</a></li>
+            <li><a href="./Pages/login.html">Login </a></li>
            </ul>
         </nav>
         <section class="ideal" id="home">
@@ -195,9 +195,9 @@
                 <h3>USEFUL LINKS</h3>
                 <a href="./index.html">Home</a>
                 <a href="#">Categories</a>
-                <a href="#">About Us</a>
-                <a href="#">Contact Us</a>
-                <a href="#">Login</a>
+                <a href="./Pages/about.html">About Us</a>
+                <a href="./Pages/contact.html">Contact Us</a>
+                <a href="./Pages/login.html">Login</a>
             </div>
             <div class="second">
                 <h3>CONNECT WITH US</h3>
