--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -37,7 +37,7 @@
         <p type="Name:"><input placeholder="Write your name here.."></input></p>
         <p type="Email:"><input placeholder="Let us know how to contact you back.."></input></p>
         <p type="Message:"><input placeholder="What would you like to tell us.."></input></p>
-        <button>Send Message</button>
+        <button class="b1">Send Message</button>
       </form>
 
       <section class="foot">
