--- a/Pages/login.html
+++ b/Pages/login.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <li><a href="./../Pages/about.html">About Us</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="./../Pages/contact.html">Contact Us</a></li>
             <li><a href="./../Pages/login.html">Login </a></li>
            </ul>
         </nav>
