--- a/Pages/about.html
+++ b/Pages/about.html
@@ -11,7 +11,7 @@
         <nav>
            <a href="#" class="logo">CARA🌿</a>
            <ul class="menu">
-            <li><a href="#home" class="active">HOME</a></li>
+            <li><a href="./../index.html" class="active">HOME</a></li>
             <div class="dropdown">
                 <input type="checkbox" id="dropdown-toggle" class="dropdown-checkbox">
                 <label for="dropdown-toggle" class="dropbtn">
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <li><a href="./../Pages/about.html">About Us</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="./../Pages/contact.html">Contact Us</a></li>
             <li><a href="./../Pages/login.html">Login </a></li>
            </ul>
         </nav>
